--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ matrix:
         - os:   osx
           osx_image: xcode8.3
         - os:   osx
-          osx_image: xcode9 - fails decodable in testSchemaWithInlineArrayToMany
+          osx_image: xcode9
         - os:   osx
           osx_image: xcode9.2
         - os:   osx
